--- a/evlenselPackage/NAMESPACE
+++ b/evlenselPackage/NAMESPACE
@@ -4,6 +4,7 @@ export(analyze_distribution)
 export(analyze_missing_data)
 export(calculate_correlations_with_price_excel)
 export(clean_and_write_excel)
+export(convert_and_write_excel)
 export(delete_column_from_excel)
 export(fill_na_with_mean)
 export(fill_na_with_mode)
@@ -12,6 +13,7 @@ export(visualize_columns)
 import(cowplot)
 import(dplyr)
 import(ggplot2)
+import(openxlsx)
 import(readxl)
 import(tidyr)
 import(writexl)
