--- a/evlenselPackage/NAMESPACE
+++ b/evlenselPackage/NAMESPACE
@@ -9,6 +9,8 @@ export(delete_column_from_excel)
 export(fill_na_with_mean)
 export(fill_na_with_mode)
 export(load_libraries)
+export(predict_from_model)
+export(train_model)
 export(visualize_columns)
 import(cowplot)
 import(dplyr)
