add decision tree

--- a/evlenselPackage/NAMESPACE
+++ b/evlenselPackage/NAMESPACE
@@ -8,6 +8,8 @@ export(convert_and_write_excel)
 export(delete_column_from_excel)
 export(fill_na_with_mean)
 export(fill_na_with_mode)
+export(karar_agaci_predict)
+export(karar_agaci_train)
 export(load_libraries)
 export(predict_from_model)
 export(train_model)
